--- a/medium.html
+++ b/medium.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Medium</title>
 
-    <script src="https://kit.fontawesome.com/2e72764ef6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.min.css">
+
 </head>
 
 <body>
@@ -58,7 +60,8 @@
 
 
 
-
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/jquery.slim.min.js"></script>
 
 </body>
 
