--- a/medium.html
+++ b/medium.html
@@ -9,12 +9,13 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
 
-    <div style="background-color: #FFC017;">
+    <div style="background-color: #FFC017; border-bottom: 1px solid #414141;">
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
@@ -26,9 +27,12 @@
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ml-auto">
+                        <ul class="navbar-nav offset-7">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Out Story</a>
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " aria-current="page" href="#">Out Story</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Membership</a>
@@ -46,6 +50,15 @@
                     </div>
                 </div>
             </nav>
+
+        </div>
+    </div>
+    <div class="">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">Lorem, ipsum dolor.</div>
+                <div class="col-6">Görsel</div>
+            </div>
         </div>
     </div>
 
@@ -60,8 +73,8 @@
 
 
 
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/jquery.slim.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery.slim.min.js"></script>
 
 </body>
 
