--- a/medium.html
+++ b/medium.html
@@ -53,7 +53,7 @@
 
         </div>
     </div>
-    <div class="">
+    <div class="bg-yellow py-5 border-bottom-dark">
         <div class="container">
             <div class="row">
                 <div class="col-6">Lorem, ipsum dolor.</div>
