--- a/medium.html
+++ b/medium.html
@@ -9,6 +9,9 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -55,9 +58,14 @@
     </div>
     <div class="bg-yellow py-5 border-bottom-dark">
         <div class="container">
-            <div class="row">
-                <div class="col-6">Lorem, ipsum dolor.</div>
-                <div class="col-6">Görsel</div>
+            <div style="color: rgb(14, 13, 13);" class="row">
+                <div class="col-6"><p style="font-size: 100px ;" class=" fw-bold">Stay curious.</p><p style="color: #2c2c2c;" class="fs-4 pe-5">Discover stories, thinking, and expertise from writers on any topic.</p>
+                    <div>
+                        <a style="width: 200px; border-radius: 100px;" class="nav-link btn btn-dark text-light p-2 fw-bold mt-5">Start reading</a>
+                    </div>
+                </div>
+                <div class="col-6 "><img src="img/Ekran görüntüsü 2023-04-28 201532.png"></div>
+                
             </div>
         </div>
     </div>
