--- a/medium.html
+++ b/medium.html
@@ -69,6 +69,13 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h6><i class="fas fa-rocket"></i><small class="ms-2">TRENDING ON MEDIUM</small></h6>
+            </div>
+        </div>
+    </div>
 
 
 
