--- a/medium.html
+++ b/medium.html
@@ -18,6 +18,8 @@
 
 <body>
 
+    <!-- NAVBAR-->
+
     <div style="background-color: #FFC017; border-bottom: 1px solid #414141;">
         <div class="container">
             <nav class="navbar navbar-expand-lg">
@@ -30,7 +32,7 @@
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav offset-7">
+                        <ul class="navbar-nav offset-6">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
@@ -44,10 +46,10 @@
                                 <a class="nav-link" href="#">Write</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link ">Sign</a>
+                                <a class="nav-link ">Sign In</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link btn btn-dark text-light">Get Started</a>
+                                <a style="border-radius: 100px;" class="nav-link btn btn-dark text-light">Get Started</a>
                             </li>
                         </ul>
                     </div>
@@ -56,6 +58,9 @@
 
         </div>
     </div>
+
+    <!-- SLİDER -->
+
     <div class="bg-yellow py-5 border-bottom-dark">
         <div class="container">
             <div style="color: rgb(14, 13, 13);" class="row">
@@ -69,9 +74,12 @@
             </div>
         </div>
     </div>
+
+    <!-- CONTENT -->
+
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 mt-4">
                 <h6><i class="fas fa-rocket"></i><small class="ms-2">TRENDING ON MEDIUM</small></h6>
             </div>
         </div>
