--- a/medium.html
+++ b/medium.html
@@ -82,12 +82,13 @@
             <div class="col-12 mt-4">
                 <h6><i class="fas fa-rocket"></i><small class="ms-2">TRENDING ON MEDIUM</small></h6>
             </div>
-            <div class="col-sm-4">Lorem.</div>
-            <div class="col-sm-4">Vero?</div>
-            <div class="col-sm-4">Ab.</div>
-            <div class="col-sm-4">Magnam!</div>
-            <div class="col-sm-4">Corrupti.</div>
-            <div class="col-sm-4">Ipsam?</div>
+            
+            <article class="col-sm-4">Lorem.</article>
+            <article class="col-sm-4">Ratione?</article>
+            <article class="col-sm-4">Recusandae.</article>
+            <article class="col-sm-4">Quidem?</article>
+            <article class="col-sm-4">Perferendis.</article>
+            <article class="col-sm-4">Delectus.</article>
         </div>
     </div>
 
