--- a/medium.html
+++ b/medium.html
@@ -82,6 +82,8 @@
             <div class="col-12 mt-4">
                 <h6><i class="fas fa-rocket"></i><small class="ms-2">TRENDING ON MEDIUM</small></h6>
             </div>
+
+            <!-- Article -->
             
             <article class="col-sm-4">Lorem.</article>
             <article class="col-sm-4">Ratione?</article>
