--- a/medium.html
+++ b/medium.html
@@ -84,8 +84,15 @@
             </div>
 
             <!-- Article -->
-            
-            <article class="col-sm-4">Lorem.</article>
+
+            <article class="col-sm-4">
+                <div class="row">
+                    <div class="col-1">
+                        <h4>01</h4>
+                    </div>
+                    <div class="col-11"></div>
+                </div>
+            </article>
             <article class="col-sm-4">Ratione?</article>
             <article class="col-sm-4">Recusandae.</article>
             <article class="col-sm-4">Quidem?</article>
