--- a/medium.html
+++ b/medium.html
@@ -8,6 +8,7 @@
     <title>Medium</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -76,10 +77,9 @@
     </div>
 
     <!-- CONTENT -->
-
     <div class="container">
         <div class="row">
-            <div class="col-12 mt-4">
+            <div class="col-12 mt-5">
                 <h6><i class="fas fa-rocket"></i><small class="ms-2">TRENDING ON MEDIUM</small></h6>
             </div>
 
@@ -88,16 +88,18 @@
             <article class="col-sm-4">
                 <div class="row">
                     <div class="col-1">
-                        <h4>01</h4>
+                        <h2 class="text-black-50">01</h2>
                     </div>
-                    <div class="col-11"></div>
+                    <div class="col-11">
+                        <img class="rounded-4 ms-3" src="https://picsum.photos/id/85/20/20" alt="">
+                        <span class="">Joe Duncan</span>
+                        <h6 class="mt-2 ms-3">The Disney-DeSantis Battle Has Crossed a Terrifying Line</h6>
+                        <span class="text-black-50 timeadd ms-3">Apr 22 · 5 min read <i class="fa-solid fa-star ms-1" style="color: #ffdd00;"></i></span>
+                        
+                    </div>
                 </div>
             </article>
-            <article class="col-sm-4">Ratione?</article>
-            <article class="col-sm-4">Recusandae.</article>
-            <article class="col-sm-4">Quidem?</article>
-            <article class="col-sm-4">Perferendis.</article>
-            <article class="col-sm-4">Delectus.</article>
+            
         </div>
     </div>
 
