--- a/medium.html
+++ b/medium.html
@@ -113,6 +113,20 @@
                     </div>
                 </div>
             </article>
+            <article class="col-sm-4">
+                <div class="row">
+                    <div class="col-1">
+                        <h2 class="text-black-50">01</h2>
+                    </div>
+                    <div class="col-11">
+                        <img class="rounded-4 ms-3" src="https://picsum.photos/id/85/20/20" alt="">
+                        <span class="">Joe Duncan</span>
+                        <h6 class="mt-2 ms-3">The Disney-DeSantis Battle Has Crossed a Terrifying Line</h6>
+                        <span class="text-black-50 timeadd ms-3">Apr 22 · 5 min read <i class="fa-solid fa-star ms-1" style="color: #ffdd00;"></i></span>
+                        
+                    </div>
+                </div>
+            </article>
             
         </div>
     </div>
