--- a/medium.html
+++ b/medium.html
@@ -81,95 +81,133 @@
         </div>
     </div>
 
-    <!-- CONTENT -->
+    <!-- CONTAİNER -->
+
     <div class="container">
         <div class="row">
             <div class="col-12 mt-5">
                 <h6><i class="fas fa-rocket"></i><small class="ms-2">TRENDING ON MEDIUM</small></h6>
             </div>
 
-            <!-- Article -->
+    
 
-            <article class="col-sm-4">
-                <div class="row">
-                    <div class="col-1">
-                        <h2 class="text-black-50">01</h2>
+            <div class="row border-light ">
+                <article class="col-sm-4">
+                    <div class="row">
+                        <div class="col-1">
+                            <h2 class="text-black-50">01</h2>
+                        </div>
+                        <div class="col-11">
+                            <img class="rounded-4 ms-3" src="https://picsum.photos/id/85/20/20" alt="">
+                            <span class="small ">Joe Duncan</span>
+                            <h6 class="mt-2 ms-3">The Disney-DeSantis Battle Has Crossed a Terrifying Line</h6>
+                            <span class="text-black-50 timeadd ms-3">Apr 22 · 5 min read <i
+                                    class="fa-solid fa-star ms-2" style="color: #ffdd00;"></i></span>
+                        </div>
                     </div>
-                    <div class="col-11">
-                        <img class="rounded-4 ms-3" src="https://picsum.photos/id/85/20/20" alt="">
-                        <span class="small">Joe Duncan</span>
-                        <h6 class="mt-2 ms-3">The Disney-DeSantis Battle Has Crossed a Terrifying Line</h6>
-                        <span class="text-black-50 timeadd ms-3">Apr 22 · 5 min read <i class="fa-solid fa-star ms-2" style="color: #ffdd00;"></i></span>
+                </article>
+                <article class="col-sm-4">
+                    <div class="row">
+                        <div class="col-1">
+                            <h2 class="text-black-50">02</h2>
+                        </div>
+                        <div class="col-11">
+                            <img class="rounded-4 ms-3" src="https://picsum.photos/id/90/20/20" alt="">
+                            <span class="small">Cassie Kozyrkov</span>
+                            <h6 class="mt-2 ms-3 mb-4">How AI is Evolving</h6>
+                            <span class="text-black-50 timeadd ms-3">Apr 27 · 3 min read<i class="fa-solid fa-star ms-2"
+                                    style="color: #ffdd00;"></i></span>
+                        </div>
                     </div>
-                </div>
-            </article>
-            <article class="col-sm-4">
-                <div class="row">
-                    <div class="col-1">
-                        <h2 class="text-black-50">02</h2>
+                </article>
+                <article class="col-sm-4">
+                    <div class="row">
+                        <div class="col-1">
+                            <h2 class="text-black-50">03</h2>
+                        </div>
+                        <div class="col-11">
+                            <img class="rounded-4 ms-3" src="https://picsum.photos/id/29/20/20" alt="">
+                            <span class="small">Felicia Wu in UX Collective</span>
+                            <h6 class="mt-2 ms-3">My first layoff was the best thing that could happen to my career</h6>
+                            <span class="text-black-50 timeadd ms-3">Apr 24 · 7 min read</span>
+                        </div>
                     </div>
-                    <div class="col-11">
-                        <img class="rounded-4 ms-3" src="https://picsum.photos/id/90/20/20" alt="">
-                        <span class="small">Cassie Kozyrkov</span>
-                        <h6 class="mt-2 ms-3 mb-4">How AI is Evolving</h6>
-                        <span class="text-black-50 timeadd ms-3">Apr 27 · 3 min read<i class="fa-solid fa-star ms-2" style="color: #ffdd00;"></i></span>
+                </article>
+                <article class="col-sm-4 mt-3">
+                    <div class="row">
+                        <div class="col-1">
+                            <h2 class="text-black-50">04</h2>
+                        </div>
+                        <div class="col-11">
+                            <img class="rounded-4 ms-3" src="https://picsum.photos/id/35/20/20" alt="">
+                            <span class="">Whitney Alese in ZORA</span>
+                            <h6 class="mt-2 ms-3">There will be no mourning Carolyn Bryant Donham</h6>
+                            <span class="text-black-50 timeadd ms-3">Apr 27 · 3 min read <i
+                                    class="fa-solid fa-star ms-2" style="color: #ffdd00;"></i></span>
+                        </div>
                     </div>
-                </div>
-            </article>
-            <article class="col-sm-4">
-                <div class="row">
-                    <div class="col-1">
-                        <h2 class="text-black-50">03</h2>
+                </article>
+                <article class="col-sm-4 mt-3">
+                    <div class="row">
+                        <div class="col-1">
+                            <h2 class="text-black-50">05</h2>
+                        </div>
+                        <div class="col-11">
+                            <img class="rounded-4 ms-3" src="https://picsum.photos/id/57/20/20" alt="">
+                            <span class="small">Alexander Nguyen in Level Up Coding</span>
+                            <h6 class="mt-2 ms-3">Why I Keep Failing Candidates During Google Interviews…</h6>
+                            <span class="text-black-50 timeadd ms-3">Apr 13 · 4 min read<i class="fa-solid fa-star ms-2"
+                                    style="color: #ffdd00;"></i></span>
+                        </div>
                     </div>
-                    <div class="col-11">
-                        <img class="rounded-4 ms-3" src="https://picsum.photos/id/29/20/20" alt="">
-                        <span class="small">Felicia Wu in UX Collective</span>
-                        <h6 class="mt-2 ms-3">My first layoff was the best thing that could happen to my career</h6>
-                        <span class="text-black-50 timeadd ms-3">Apr 24 · 7 min read</span>
+                </article>
+                <article class="col-sm-4 mt-3">
+                    <div class="row">
+                        <div class="col-1">
+                            <h2 class="text-black-50">06</h2>
+                        </div>
+                        <div class="col-11">
+                            <img class="rounded-4 ms-3" src="https://picsum.photos/id/87/20/20" alt="">
+                            <span class="small">Arthur Hayes</span>
+                            <h6 class="mt-2 ms-3 mb-4">Exit Liquidity</h6>
+                            <span class="text-black-50 timeadd ms-3">Apr 21 · 27 min read</span>
+                        </div>
                     </div>
-                </div>
-            </article>
-            <article class="col-sm-4 mt-3">
-                <div class="row">
-                    <div class="col-1">
-                        <h2 class="text-black-50">04</h2>
-                    </div>
-                    <div class="col-11">
-                        <img class="rounded-4 ms-3" src="https://picsum.photos/id/35/20/20" alt="">
-                        <span class="">Whitney Alese in ZORA</span>
-                        <h6 class="mt-2 ms-3">There will be no mourning Carolyn Bryant Donham</h6>
-                        <span class="text-black-50 timeadd ms-3">Apr 27 · 3 min read <i class="fa-solid fa-star ms-2" style="color: #ffdd00;"></i></span>
-                    </div>
-                </div>
-            </article>
-            <article class="col-sm-4 mt-3">
-                <div class="row">
-                    <div class="col-1">
-                        <h2 class="text-black-50">05</h2>
-                    </div>
-                    <div class="col-11">
-                        <img class="rounded-4 ms-3" src="https://picsum.photos/id/57/20/20" alt="">
-                        <span class="small">Alexander Nguyen in Level Up Coding</span>
-                        <h6 class="mt-2 ms-3">Why I Keep Failing Candidates During Google Interviews…</h6>
-                        <span class="text-black-50 timeadd ms-3">Apr 13 · 4 min read<i class="fa-solid fa-star ms-2" style="color: #ffdd00;"></i></span>
-                    </div>
-                </div>
-            </article>
-            <article class="col-sm-4 mt-3">
-                <div class="row">
-                    <div class="col-1">
-                        <h2 class="text-black-50">06</h2>
-                    </div>
-                    <div class="col-11">
-                        <img class="rounded-4 ms-3" src="https://picsum.photos/id/87/20/20" alt="">
-                        <span class="small">Arthur Hayes</span>
-                        <h6 class="mt-2 ms-3 mb-4">Exit Liquidity</h6>
-                        <span class="text-black-50 timeadd ms-3">Apr 21 · 27 min read</span>
-                    </div>
-                </div>
-            </article>
-
+                </article>
+            </div>
         </div>
+    </div>
+
+    <!-- LİST BUTTON-->
+    
+    <div class="mt-5 border-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-8"></div>
+                <div class="col-4">
+                    <section class="row mt-5">
+                        <div class="col-12">
+                            <ul class="list-group list-group-horizontal">
+                                <li class="list-unstyled"><button type="button" class="btn btn-light">Programming</button></li>
+                                <li class="list-unstyled"><button type="button" class="btn btn-light">Data Science</button></li>
+                                <li class="list-unstyled"><button type="button" class="btn btn-light">Technology</button></li>
+                            </ul>
+                            <ul class="list-group list-group-horizontal">
+                                <li class="list-unstyled"><button type="button" class="btn btn-light">Self Improvement</button></li>
+                                <li class="list-unstyled"><button type="button" class="btn btn-light">Writing</button></li>
+                                <li class="list-unstyled"><button type="button" class="btn btn-light">Relationships</button></li>
+                            </ul>
+                            <ul class="list-group list-group-horizontal">
+                                <li class="list-unstyled"><button type="button" class="btn btn-light">Machine Learning</button></li>
+                                <li class="list-unstyled"><button type="button" class="btn btn-light">Productivity</button></li>
+                                <li class="list-unstyled"><button type="button" class="btn btn-light">Politics</button></li>
+                            </ul>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
