--- a/medium.html
+++ b/medium.html
@@ -99,7 +99,7 @@
                         </div>
                         <div class="col-11">
                             <img class="rounded-4 ms-3" src="https://picsum.photos/id/85/20/20" alt="">
-                            <span class="small ">Joe Duncan</span>
+                            <span class="font-face">Joe Duncan</span>
                             <h6 class="mt-2 ms-3">The Disney-DeSantis Battle Has Crossed a Terrifying Line</h6>
                             <span class="text-black-50 timeadd ms-3">Apr 22 · 5 min read <i
                                     class="fa-solid fa-star ms-2" style="color: #ffdd00;"></i></span>
@@ -113,7 +113,7 @@
                         </div>
                         <div class="col-11">
                             <img class="rounded-4 ms-3" src="https://picsum.photos/id/90/20/20" alt="">
-                            <span class="small">Cassie Kozyrkov</span>
+                            <span class="font-face">Cassie Kozyrkov</span>
                             <h6 class="mt-2 ms-3 mb-4">How AI is Evolving</h6>
                             <span class="text-black-50 timeadd ms-3">Apr 27 · 3 min read<i class="fa-solid fa-star ms-2"
                                     style="color: #ffdd00;"></i></span>
@@ -127,7 +127,7 @@
                         </div>
                         <div class="col-11">
                             <img class="rounded-4 ms-3" src="https://picsum.photos/id/29/20/20" alt="">
-                            <span class="small">Felicia Wu in UX Collective</span>
+                            <span class="font-face">Felicia Wu in UX Collective</span>
                             <h6 class="mt-2 ms-3">My first layoff was the best thing that could happen to my career</h6>
                             <span class="text-black-50 timeadd ms-3">Apr 24 · 7 min read</span>
                         </div>
@@ -140,7 +140,7 @@
                         </div>
                         <div class="col-11">
                             <img class="rounded-4 ms-3" src="https://picsum.photos/id/35/20/20" alt="">
-                            <span class="">Whitney Alese in ZORA</span>
+                            <span class="font-face">Whitney Alese in ZORA</span>
                             <h6 class="mt-2 ms-3">There will be no mourning Carolyn Bryant Donham</h6>
                             <span class="text-black-50 timeadd ms-3">Apr 27 · 3 min read <i
                                     class="fa-solid fa-star ms-2" style="color: #ffdd00;"></i></span>
@@ -154,7 +154,7 @@
                         </div>
                         <div class="col-11">
                             <img class="rounded-4 ms-3" src="https://picsum.photos/id/57/20/20" alt="">
-                            <span class="small">Alexander Nguyen in Level Up Coding</span>
+                            <span class="font-face">Alexander Nguyen in Level Up Coding</span>
                             <h6 class="mt-2 ms-3">Why I Keep Failing Candidates During Google Interviews…</h6>
                             <span class="text-black-50 timeadd ms-3">Apr 13 · 4 min read<i class="fa-solid fa-star ms-2"
                                     style="color: #ffdd00;"></i></span>
@@ -168,7 +168,7 @@
                         </div>
                         <div class="col-11">
                             <img class="rounded-4 ms-3" src="https://picsum.photos/id/87/20/20" alt="">
-                            <span class="small">Arthur Hayes</span>
+                            <span class="font-face">Arthur Hayes</span>
                             <h6 class="mt-2 ms-3 mb-4">Exit Liquidity</h6>
                             <span class="text-black-50 timeadd ms-3">Apr 21 · 27 min read</span>
                         </div>
@@ -179,7 +179,7 @@
     </div>
 
     <!-- LİST BUTTON-->
-    
+
     <div class="mt-5 border-top">
         <div class="container">
             <div class="row">
@@ -188,19 +188,19 @@
                     <section class="row mt-5">
                         <div class="col-12">
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-unstyled"><button type="button" class="btn btn-light">Programming</button></li>
-                                <li class="list-unstyled"><button type="button" class="btn btn-light">Data Science</button></li>
-                                <li class="list-unstyled"><button type="button" class="btn btn-light">Technology</button></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light">Programming</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light">Data Science</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light">Technology</a></li>
                             </ul>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-unstyled"><button type="button" class="btn btn-light">Self Improvement</button></li>
-                                <li class="list-unstyled"><button type="button" class="btn btn-light">Writing</button></li>
-                                <li class="list-unstyled"><button type="button" class="btn btn-light">Relationships</button></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light">Self Improvement</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light">Writing</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light">Relationships</a></li>
                             </ul>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-unstyled"><button type="button" class="btn btn-light">Machine Learning</button></li>
-                                <li class="list-unstyled"><button type="button" class="btn btn-light">Productivity</button></li>
-                                <li class="list-unstyled"><button type="button" class="btn btn-light">Politics</button></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light">Machine Learning</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light">Productivity</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light">Politics</a></li>
                             </ul>
                         </div>
                     </section>
@@ -209,10 +209,6 @@
         </div>
 
     </div>
-
-
-
-
 
 
 
