--- a/medium.html
+++ b/medium.html
@@ -188,19 +188,19 @@
                     <section class="row mt-5">
                         <div class="col-12">
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-unstyled"><a type="button" class="btn btn-light">Programming</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light">Data Science</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light">Technology</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Programming</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Data Science</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Technology</a></li>
                             </ul>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-unstyled"><a type="button" class="btn btn-light">Self Improvement</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light">Writing</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light">Relationships</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Self Improvement</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Writing</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Relationships</a></li>
                             </ul>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-unstyled"><a type="button" class="btn btn-light">Machine Learning</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light">Productivity</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light">Politics</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Machine Learning</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Productivity</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Politics</a></li>
                             </ul>
                         </div>
                     </section>
