--- a/medium.html
+++ b/medium.html
@@ -183,10 +183,16 @@
     <div class="mt-5 border-top">
         <div class="container">
             <div class="row">
-                <div class="col-8"></div>
+                <div class="col-8">
+                    <div class="row">
+                        <div class="col-8"></div>
+                        <div class="col-4"><img src="https://picsum.photos/200/200" alt="" ></div>
+                    </div>
+                </div>
                 <div class="col-4">
                     <section class="row mt-5">
                         <div class="col-12">
+                            <p>Discover more of what matters to you</p>
                             <ul class="list-group list-group-horizontal">
                                 <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Programming</a></li>
                                 <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Data Science</a></li>
