--- a/medium.html
+++ b/medium.html
@@ -89,7 +89,7 @@
                 <h6><i class="fas fa-rocket"></i><small class="ms-2">TRENDING ON MEDIUM</small></h6>
             </div>
 
-    
+
 
             <div class="row border-light ">
                 <article class="col-sm-4">
@@ -178,36 +178,66 @@
         </div>
     </div>
 
-    <!-- LİST BUTTON-->
+    <!-- LEFT SİDE & LİST BUTTON-->
 
     <div class="mt-5 border-top">
         <div class="container">
             <div class="row">
                 <div class="col-8">
-                    <div class="row">
-                        <div class="col-8"></div>
-                        <div class="col-4"><img src="https://picsum.photos/200/200" alt="" ></div>
+                    <div class="row mt-5">
+                        <div class="col-8">
+                            <img class="rounded-4" src="https://picsum.photos/20/20" alt="">
+                            <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
+                            <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
+                            <span class="text-black-50 ">A few Medium stories you may have missed this week</span>
+                            <h6 style="font-size: 14px;" class="text-black-50 mt-2">Apr 28 · 5 min read </h6>
+                        </div>
+                        <div class="col-4"><img src="https://picsum.photos/200/115" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="col-4">
-                    <section class="row mt-5">
+                    <section class="row mt-5 border-bottom">
                         <div class="col-12">
                             <p>Discover more of what matters to you</p>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Programming</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Data Science</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Technology</a></li>
+                                <li class="list-unstyled"><a type="button"
+                                        class="btn btn-light font-face btn-box">Programming</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Data
+                                        Science</a></li>
+                                <li class="list-unstyled"><a type="button"
+                                        class="btn btn-light font-face btn-box">Technology</a></li>
                             </ul>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Self Improvement</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Writing</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Relationships</a></li>
+                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Self
+                                        Improvement</a></li>
+                                <li class="list-unstyled"><a type="button"
+                                        class="btn btn-light font-face btn-box">Writing</a></li>
+                                <li class="list-unstyled"><a type="button"
+                                        class="btn btn-light font-face btn-box">Relationships</a></li>
                             </ul>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Machine Learning</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Productivity</a></li>
-                                <li class="list-unstyled"><a type="button" class="btn btn-light font-face btn-box">Politics</a></li>
+                                <li class="list-unstyled"><a type="button"
+                                        class="btn btn-light font-face btn-box">Machine Learning</a></li>
+                                <li class="list-unstyled"><a type="button"
+                                        class="btn btn-light font-face btn-box">Productivity</a></li>
+                                <li class="list-unstyled"><a type="button"
+                                        class="btn btn-light font-face btn-box">Politics</a></li>
                             </ul>
+                            <p class="mt-4 mb-4 text-success font-face">See more topics</p>
+                        </div>
+                        <div class="row border-top">
+                            <div class="col-12">
+                                <a class="btn text-black-50 font-face mt-4" href="#" role="button">Help</a>
+                                <a class="btn text-black-50 font-face mt-4" href="#" role="button">Status</a>
+                                <a class="btn text-black-50 font-face mt-4" href="#" role="button">Writers</a>
+                                <a class="btn text-black-50 font-face mt-4" href="#" role="button">Blog</a>
+                                <a class="btn text-black-50 font-face mt-4" href="#" role="button">Careers</a>
+                                <a class="btn text-black-50 font-face" href="#" role="button">Privacy</a>
+                                <a class="btn text-black-50 font-face" href="#" role="button">Terms</a>
+                                <a class="btn text-black-50 font-face" href="#" role="button">About</a>
+                                <a class="btn text-black-50 font-face" href="#" role="button">Text to speech</a>
+                            </div>
                         </div>
                     </section>
                 </div>
