--- a/medium.html
+++ b/medium.html
@@ -185,19 +185,82 @@
             <div class="row">
                 <div class="col-8">
                     <div class="row mt-5">
-                        <div class="col-8">
-                            <img class="rounded-4" src="https://picsum.photos/20/20" alt="">
+                        <div class="col-8 mt-4 ps-5">
+                            <img class="rounded-4" src="https://picsum.photos/id/89/20/20" alt="">
                             <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
                             <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
                             <span class="text-black-50 ">A few Medium stories you may have missed this week</span>
                             <h6 style="font-size: 14px;" class="text-black-50 mt-2">Apr 28 · 5 min read </h6>
                         </div>
-                        <div class="col-4"><img src="https://picsum.photos/200/115" alt="">
+                        <div class="col-4 mt-4"><img src="https://picsum.photos/id/120/200/115" alt="">
+                        </div>
+                        <div class="col-8 mt-5">
+                            <img class="rounded-4" src="https://picsum.photos/id/103/20/20" alt="">
+                            <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
+                            <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
+                            <span class="text-black-50 ">A few Medium stories you may have missed this week</span>
+                            <h6 style="font-size: 14px;" class="text-black-50 mt-2">Apr 28 · 5 min read </h6>
+                        </div>
+                        <div class="col-4 mt-5"><img src="https://picsum.photos/id/104/200/115" alt="">
+                        </div>
+                        <div class="col-8 mt-5">
+                            <img class="rounded-4" src="https://picsum.photos/id/105/20/20" alt="">
+                            <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
+                            <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
+                            <span class="text-black-50 ">A few Medium stories you may have missed this week</span>
+                            <h6 style="font-size: 14px;" class="text-black-50 mt-2">Apr 28 · 5 min read </h6>
+                        </div>
+                        <div class="col-4 mt-5"><img src="https://picsum.photos/id/106/200/115" alt="">
+                        </div>
+                        <div class="col-8 mt-5">
+                            <img class="rounded-4" src="https://picsum.photos/id/107/20/20" alt="">
+                            <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
+                            <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
+                            <span class="text-black-50 ">A few Medium stories you may have missed this week</span>
+                            <h6 style="font-size: 14px;" class="text-black-50 mt-2">Apr 28 · 5 min read </h6>
+                        </div>
+                        <div class="col-4 mt-5"><img src="https://picsum.photos/id/108/200/115" alt="">
+                        </div>
+                        <div class="col-8 mt-5">
+                            <img class="rounded-4" src="https://picsum.photos/id/109/20/20" alt="">
+                            <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
+                            <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
+                            <span class="text-black-50 ">A few Medium stories you may have missed this week</span>
+                            <h6 style="font-size: 14px;" class="text-black-50 mt-2">Apr 28 · 5 min read </h6>
+                        </div>
+                        <div class="col-4 mt-5"><img src="https://picsum.photos/id/90/200/115" alt="">
+                        </div>
+                        <div class="col-8 mt-5">
+                            <img class="rounded-4" src="https://picsum.photos/id/91/20/20" alt="">
+                            <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
+                            <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
+                            <span class="text-black-50 ">A few Medium stories you may have missed this week</span>
+                            <h6 style="font-size: 14px;" class="text-black-50 mt-2">Apr 28 · 5 min read </h6>
+                        </div>
+                        <div class="col-4 mt-5"><img src="https://picsum.photos/id/92/200/115" alt="">
+                        </div>
+                        <div class="col-8 mt-5">
+                            <img class="rounded-4" src="https://picsum.photos/id/93/20/20" alt="">
+                            <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
+                            <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
+                            <span class="text-black-50 ">A few Medium stories you may have missed this week</span>
+                            <h6 style="font-size: 14px;" class="text-black-50 mt-2">Apr 28 · 5 min read </h6>
+                        </div>
+                        <div class="col-4 mt-5"><img src="https://picsum.photos/id/94/200/115" alt="">
+                        </div>
+                        <div class="col-8 mt-5">
+                            <img class="rounded-4" src="https://picsum.photos/id/96/20/20" alt="">
+                            <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
+                            <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
+                            <span class="text-black-50 ">A few Medium stories you may have missed this week</span>
+                            <h6 style="font-size: 14px;" class="text-black-50 mt-2">Apr 28 · 5 min read </h6>
+                        </div>
+                        <div class="col-4 mt-5"><img src="https://picsum.photos/id/100/200/115" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
-                    <section class="row mt-5 border-bottom">
+                    <section class="row mt-5 ">
                         <div class="col-12">
                             <p>Discover more of what matters to you</p>
                             <ul class="list-group list-group-horizontal">
