--- a/medium.html
+++ b/medium.html
@@ -21,49 +21,52 @@
 
     <!-- NAVBAR-->
 
-    <div style="background-color: #FFC017; border-bottom: 1px solid #414141;">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Medium</a>
+    <div style="background-color: #FFC017;">
+        <div style="background-color: #FFC017; border-bottom: 1px solid #414141; ">
+            <div class="container fixed-top ">
+                <nav style="background-color: #FFC017;" class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">Medium</a>
 
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
 
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav offset-6">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link " aria-current="page" href="#">Out Story</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Membership</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Write</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link ">Sign In</a>
-                            </li>
-                            <li class="nav-item">
-                                <a style="border-radius: 100px;" class="nav-link btn btn-dark text-light">Get
-                                    Started</a>
-                            </li>
-                        </ul>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav offset-6">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link " aria-current="page" href="#">Out Story</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Membership</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Write</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link ">Sign In</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a style="border-radius: 100px;" class="nav-link btn btn-dark text-light">Get
+                                        Started</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
 
+            </div>
         </div>
     </div>
 
     <!-- SLİDER -->
 
-    <div class="bg-yellow py-5 border-bottom-dark">
+    <div class="bg-yellow py-5 border-bottom-dark mt-5">
         <div class="container">
             <div style="color: rgb(14, 13, 13);" class="row">
                 <div class="col-6">
@@ -75,7 +78,7 @@
                             class="nav-link btn btn-dark text-light p-2 fw-bold mt-5">Start reading</a>
                     </div>
                 </div>
-                <div class="col-6 "><img src="img/Ekran görüntüsü 2023-04-28 201532.png"></div>
+                <div class="col-6 ps-5"><img src="img/Ekran görüntüsü 2023-04-28 201532.png"></div>
 
             </div>
         </div>
@@ -194,7 +197,7 @@
                         </div>
                         <div class="col-4 mt-4"><img src="https://picsum.photos/id/120/200/115" alt="">
                         </div>
-                        <div class="col-8 mt-5">
+                        <div class="col-8 mt-5 ps-5">
                             <img class="rounded-4" src="https://picsum.photos/id/103/20/20" alt="">
                             <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
                             <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
@@ -203,7 +206,7 @@
                         </div>
                         <div class="col-4 mt-5"><img src="https://picsum.photos/id/104/200/115" alt="">
                         </div>
-                        <div class="col-8 mt-5">
+                        <div class="col-8 mt-5 ps-5">
                             <img class="rounded-4" src="https://picsum.photos/id/105/20/20" alt="">
                             <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
                             <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
@@ -212,7 +215,7 @@
                         </div>
                         <div class="col-4 mt-5"><img src="https://picsum.photos/id/106/200/115" alt="">
                         </div>
-                        <div class="col-8 mt-5">
+                        <div class="col-8 mt-5 ps-5">
                             <img class="rounded-4" src="https://picsum.photos/id/107/20/20" alt="">
                             <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
                             <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
@@ -221,7 +224,7 @@
                         </div>
                         <div class="col-4 mt-5"><img src="https://picsum.photos/id/108/200/115" alt="">
                         </div>
-                        <div class="col-8 mt-5">
+                        <div class="col-8 mt-5 ps-5">
                             <img class="rounded-4" src="https://picsum.photos/id/109/20/20" alt="">
                             <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
                             <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
@@ -230,7 +233,7 @@
                         </div>
                         <div class="col-4 mt-5"><img src="https://picsum.photos/id/90/200/115" alt="">
                         </div>
-                        <div class="col-8 mt-5">
+                        <div class="col-8 mt-5 ps-5">
                             <img class="rounded-4" src="https://picsum.photos/id/91/20/20" alt="">
                             <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
                             <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
@@ -239,7 +242,7 @@
                         </div>
                         <div class="col-4 mt-5"><img src="https://picsum.photos/id/92/200/115" alt="">
                         </div>
-                        <div class="col-8 mt-5">
+                        <div class="col-8 mt-5 ps-5">
                             <img class="rounded-4" src="https://picsum.photos/id/93/20/20" alt="">
                             <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
                             <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
@@ -248,7 +251,7 @@
                         </div>
                         <div class="col-4 mt-5"><img src="https://picsum.photos/id/94/200/115" alt="">
                         </div>
-                        <div class="col-8 mt-5">
+                        <div class="col-8 mt-5 ps-5">
                             <img class="rounded-4" src="https://picsum.photos/id/96/20/20" alt="">
                             <span class="font-face ms-2">Medium Staff in 3 Min Read</span>
                             <h5 class="mt-2 fw-bold">What we’re reading: Declutter your brain</h5>
@@ -262,7 +265,9 @@
                 <div class="col-4">
                     <section class="row mt-5 ">
                         <div class="col-12">
-                            <p>Discover more of what matters to you</p>
+                            <small>
+                                <p>Discover more of what matters to you</p>
+                            </small>
                             <ul class="list-group list-group-horizontal">
                                 <li class="list-unstyled"><a type="button"
                                         class="btn btn-light font-face btn-box">Programming</a></li>
